fix(query) portrait on iphone 6 firefox

--- a/css/query.css
+++ b/css/query.css
@@ -38,7 +38,7 @@
 
 @media only screen and (max-height: 550px) and (max-width: 550px) {
     .fm {
-        height: 55%;
+        height: 70%;
     }
 }
 
@@ -81,7 +81,7 @@
 }
 
 /* iphone 6 landscape*/
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation : landscape),
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: landscape),
 @media only screen and (max-height: 360px) and (max-width: 640px) {
     .fm {
         height: 55%;
